<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/activity_main"
        tools:context="com.internship.supercoders.superchat.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/block"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
            </android.support.v7.widget.Toolbar>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                />
        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_below="@+id/block"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="64dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="16dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="40dp"
                    app:hintTextAppearance="@style/MyHintText"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/hint_email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/MyHintText"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp">

                    <CheckBox
                        android:id="@+id/cb_keep_me_signed_in"
                        android:text="@string/keep_me_signed_in"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:checked="true"
                        android:theme="@style/MyCheckBox" />
                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="58dp"
                    android:background="#004951"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/btn_sign_in"

                    android:text="@string/hint_sign_in"
                    android:layout_marginRight="24dp"
                    android:layout_height="wrap_content" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:background="@color/colorSignUpButton"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="12dp"
                    android:id="@+id/signup_btn"

                    android:text="@string/hint_signup"
                    android:layout_marginRight="24dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:text = "@string/forgot_password"
                    android:layout_marginTop="26dp"
                    android:textColor ="@color/colorWhite"
                    android:layout_gravity="center"
                    android:textSize="15sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp">
                    <ProgressBar
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:id="@+id/progressbar"
                        android:visibility="invisible"
                        android:theme="@style/CircularProgress"
                        android:layout_gravity="center" />

                </FrameLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
</ScrollView>